feat(ImagePro): 영상 출력 프로그램
영상처리1장.pptx:72 까지 진행

--- a/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj
+++ b/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{AD0BB743-CA40-4F08-B8FD-E33300FC7918}</ProjectGuid>
+    <ProjectGuid>{D141921B-CFFE-4246-ACA7-D774A89B9FB6}</ProjectGuid>
     <RootNamespace>ImagePro_KimDongJoo</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <Keyword>MFCProj</Keyword>
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
