feat(ImagePro): 두 영상의 산술 덧셈
영상처리2장.pptx:53 까지 진행

--- a/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj
+++ b/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj
@@ -222,9 +222,15 @@
     <Image Include="UserImages.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="res\ImagePro_KimDongJoo.rc2" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="ImagePro_KimDongJoo.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
