--- a/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj.filters
+++ b/ImagePro/ImagePro_KimDongJoo/ImagePro_KimDongJoo.vcxproj.filters
@@ -89,5 +89,6 @@
     <None Include="res\ImagePro_KimDongJoo.rc2">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
